2001-12-04  Jens Gecius  <jens@gecius.de>

	* v_writer.c: 	In case output is set to something different
			than /dev/stdout (default), the output is
			written to a temp-file (name: <outputfile>.tmp)
			and then copied to the final destination
			<outputfile>. This should fix concurrent
			access problems (includes associated changes
			in other source files).

	* v_ftp.c: 	Changed function to close ftp-connection and
			added a sanity-check in an attempt to fix a
			reported error.
			Added #defines to enable successful compile if
			ftp is disabled.

	* configure.in: Changed error-message in ./configure to a
			warning message for the libraries ftplib and
			freetype - fixes longtime problem of not 
			compiling if one of these libs is not present.
			Added options to configure to intentionally
			disable timestamp and/or ftp code.
			
	Again: NO extensive tests have been performed!

2001-11-12  Jens Gecius  <jens@gecius.de> = after release

	* vgrabbj.c	Nasty little typos for the new individual
			imagesize setting and swapped height/width
			for size svga.
	
	* v_writer.c	New to the package, this file contains all
			functions related to the output of the image
			data
			Added an output option for ppm (plain linear
			RGB). You may need to switch R/G (via -S)
			because vgrabbj can not determine what mode
			your videodevice uses.
			(appropriate changes to all other files)
	* all		Removed ftplib.* from package and constructed
			dependency on the ftplib on your system. If
			don't have it, ftp is disabled (like ttf, see
			below)
			More stringent check for available libraries
			AND headers. If one of both is not available,
			timestamp and/or ftp will be disabled.

2001-11-12  Jens Gecius  <jens@gecius.de>

			Release of 0.8.0 with ftp-code, config-file,
			enhanced imagesize (even individual settings),
			bugfixes.
			Be aware: no extensive tests (it runs here -
			without ftp)!

2001-11-11  Jens Gecius  <jens@gecius.de>
